fix(ui5-(multi)-input, ui5-(multi)-combobox): remove value state message spacing

--- a/packages/main/src/themes/ValueStateMessage.css
+++ b/packages/main/src/themes/ValueStateMessage.css
@@ -82,3 +82,8 @@
 .ui5-valuestatemessage-popover::part(footer) {
 	min-height: 0;
 }
+
+.ui5-valuestatemessage-popover::part(header),
+.ui5-suggestions-popover-with-value-state-header::part(header) {
+	margin-bottom: 0;
+}
